--- a/css/openrecruitment.css
+++ b/css/openrecruitment.css
@@ -16,8 +16,15 @@
 
 .image-on-top{
 	height: 100%;
+	max-height: 20em;
 }
-
+.image-ojan{
+	height: 100%;
+	max-height: 30em;
+}
+.image-organogram{
+	height: 100%;
+}
 
 .main_h {
 	position: fixed;
@@ -49,7 +56,7 @@
 }
 
 .text-title{
-	font-size: 4rem;
+	font-size: 4em;
 }
 
 #main{
